# cleanrl

./: .drone.yml  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mkdocs.insiders.yml  .pre-commit-config.yaml  .python-version  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.torchx  ES_C51_README.md  LICENSE  MANIFEST.in  Makefile  README.md  a2c.py  benchmark.sh  costa.slurm_template  demo_fix.py  enjoy.py  entrypoint.sh  evaluation.bash  how_to_run_curisoity_critic.md  index.html  mean_rewards_data.csv  mkdocs-base.yml  mkdocs.insiders.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  test_ci_fix.py  testenv.py  tuner_example.py
cleanrl/: .dockerignore  .gitignore  CONTRIBUTING.md  ES_C51_README.md  LICENSE  __init__.py  _version.py  a2c.py  a2c_continuous_action.py  a2c_example.py  adqn.py  all_run_script.sh  apex_dqn_atari.py  apex_dqn_atari_visual.py  apo_continuous_action.py  async_ppo_atari_visual.py  atari_wrappers.py  benchmark.sh  c51.py  c51_atari.py  c51_atari_expected_sarsa.py  c51_atari_jax.py  c51_atari_visual.py  c51_expected_sarsa.py  c51_jax.py  cleanba_ppo_envpool_impala_atari_wrapper.py  cleanba_ppo_envpool_impala_atari_wrapper_large.py  common.py  crossq_continuous_action.py  dd.py  ddpg2_continuous_action.py  ddpg_continuous_action.py  ddpg_continuous_action_jax.py  ddpg_continuous_action_jit.py  ddqn.py  ddqn_atari.py  diayn_sac_continuous_action.py  dmpo_continuous_action.py  dqn.py  dqn2_atari_visual.py  (+123 more)
cleanrl/.github/: pull_request_template.md
cleanrl/.github/workflows/: utils_test.yaml
cleanrl/atari/: .python-version  buffers.py  copy.py  cpprb_test.py  dqn_atari.py  dqn_atari_cpprb copy.py  dqn_atari_per.py  mnist_example.py  ppo_atari.py  ppo_atari_fast.py  ppo_template.py  pyproject.toml  readme.md  requirements.txt  v_c51_atari.py  vc51_atari.py  vdqn.py  vdqn_atari.py  vdqn_atari_per.py  wandb_sb3.py
cleanrl/atari/vectorized_architecture/: vc51_atari.py
cleanrl/bcq_continuous/: bcq_bullet.py  bcq_bullet_sfunet.py  bcq_d4rl.py  bcq_d4rl_author.py  bcq_d4rl_authormatch.py  bcq_mujoco.py  bcq_sfujim.py
cleanrl/benchmark/: c51.sh  ddpg_plot.sh  ppo_plot.sh  ppo_trxl.sh  pqn.sh  rnd.sh  sac.sh  sac_atari.sh  td3.sh  td3_plot.sh
cleanrl/brax/: .python-version  brax_test.py  gymapi.py  old_ppo_that_works.py  ppo_brax.py  ppo_brax_test.py  ppo_brax_througput.py  ppo_continuous_action.py  pyproject.toml  readme.md  requirements.txt
cleanrl/buffers/: __init__.py  simple_replay_buffer.py
cleanrl/classic_control/: readme.md
cleanrl/cleanrl/: c51.py  c51_atari.py  c51_atari_expected_sarsa.py  c51_expected_sarsa.py  dqn_jax.py  ppo_atari_envpool_xla_jax.py  ppo_continuous_action.py  ppo_pettingzoo_ma_atari.py  ppo_rnd_envpool.py  pqn_atari_envpool.py  sac_continuous_action.py  td3_continuous_action.py
cleanrl/cleanrl/ppo_trxl/: pom_env.py  pyproject.toml
cleanrl/cleanrl_explo/: lil_maze.py  sac_apt.py  sac_aux.py  sac_icm.py  sac_ngu.py  sac_our_method.py  sac_rnd.py  train_sac_aux.py  trainer.py
cleanrl/cleanrl_explo/PA_version/: apt_sac.py  aux_sac.py  icm_sac.py  ngu_sac.py  rnd_sac.py
cleanrl/cleanrl_explo/training_aux/: sweep_id_config.py
cleanrl/cleanrl_utils/: add_header.py  docker_queue.py  plot.py
cleanrl/cleanrl_utils/evals/: c51_eval.py  dqn_eval.py  td3_eval.py
cleanrl/cql_continuous/: sac.sh  sac_cql.py  sac_cql_bullet.py
cleanrl/diayn_sac_continuous_action/: diayn_learn_skills.py  diayn_sac_continuous_action.py
cleanrl/docker/: Dockerfile  build.sh  entrypoint.sh
cleanrl/docs/: CNAME
cleanrl/docs/advanced/: hyperparameter-tuning.md  (+1 more)
cleanrl/experimental/: ppo_continuous_action_isaacgym.py
cleanrl/experiments/: a2c.py  a2c_cnn.py  a2c_cnn_Ataripreprocessing.py  a2c_continuous_action.py  a2c_gae_continuous.py  a2c_gae_continuous_tanh.py  a2c_gae_continuous_tanh_layer_norm.py  a2c_gae_tanh_layer_adv_norm.py  a2c_steps.py  acer.py  adqn.py  apex.py  apex_dqn_atari_visual.py  apex_td3_continuous_action.py  appo.py  appo_atari_visual.py  appo_different_architecture.py  async_envs.py  async_ppo_atari_visual.py  async_ppo_atari_visual2.py  c51.py  c51_atari.py  common.py  cql_fast.py  d.py  dataloader.py  ddpg2_noise.py  ddpg_continuous_action.py  ddpg_noise.py  dqn2_atari_visual.py  dqn3_atari_visual.py  dqn_atari_fast.py  dqn_cnn.py  dqn_cnn_Shmuma.py  dqn_cnn_Shmuma0.py  dqn_cnn_baselines_hp.py  dqn_cnn_baselines_pr.py  gg.py  gg2.py  impala.py  (+61 more)
cleanrl/gymnasium_support/: ppo_continuous_action.py
cleanrl/lstm/: ppo_atari_lstm.py  ppo_atari_lstm_custom.py  ppo_atari_no_frame_stack.py  ppo_memory_env.py  ppo_memory_env_lstm.py
cleanrl/oc/: a2hoc.py  a2oc_atari_envpool.py  a2oc_atari_envpool_original.py  dqoc_atari.py  dqoc_atari_envpool.py  hocpg_atari_envpool_lstm.py  ice_hopper.py  ioc_continuous_action_envpool.py  moc_continuous_action_envpool.py  msol_continuous_action_envpool.py  ocpg_atari_envpool_lstm.py  ppoc_clipall_continuous_action_envpool.py  ppoc_continuous_action_envpool.py  ppoc_continuous_action_envpool_original.py  ppocpg_atari_envpool_gru.py  transfer_env.py
cleanrl/offline/: offline_dqn_atari_visual.py  offline_dqn_cql_atari_visual.py
cleanrl/ppo_continuous_action_isaacgym/: ppo_continuous_action_isaacgym.py
cleanrl/ppo_continuous_action_isaaclab/: ppo_continuous_action_isaaclab.py
cleanrl/ppo_trxl/: enjoy.py  pom_env.py  ppo_trxl.py  pyproject.toml
cleanrl/ppo_with_proper_enropy_tuning/: ppo.py  ppo_atari.py  ppo_continuous_action.py  ppo_procgen.py
cleanrl/requirements/: requirements-cloud.txt  requirements-dm_control.txt  requirements-mujoco.txt  requirements-procgen.txt
cleanrl/tests/: common_test.py  entry_point.py  gae_test.py  test_atari.py  test_atari_jax_gymnasium.py  test_atari_multigpu.py  test_classic_control_gymnasium.py  test_classic_control_jax_gymnasium.py  test_envpool.py  test_jax_compute_gae.py  test_mujoco.py  test_pettingzoo_ma_atari.py  understand_vector_env.py  utils_test.py
cleanrl/utils/: plot_individual.py  resume.py  submit_exp.py
tutorials/classic_control/: ppo.py  ppo_reference.py  pyproject.toml
(+394 files in other folders)
