[project]
name = "cleanrl"
version = "2.0.0b1"
description = "High-quality single file implementation of Deep Reinforcement Learning algorithms with research-friendly features"
authors = [{ name = "Costa Huang", email = "costa.huang@outlook.com" }]
requires-python = ">=3.8,<3.11"
readme = "README.md"
license = "MIT"
keywords = [
    "reinforcement learning",
    "machine learning",
    "research",
]
dependencies = [
    "tensorboard>=2.10.0,<3",
    "wandb>=0.13.11,<0.14",
    "gym==0.23.1",
    "torch>=1.12.1",
    "stable-baselines3==2.0.0",
    "gymnasium>=0.28.1",
    "moviepy>=1.0.3,<2",
    "pygame==2.1.0",
    "huggingface-hub>=0.11.1,<0.12",
    "rich<12.0",
    "tenacity>=8.2.2,<9",
    "tyro>=0.5.10,<0.6",
    "pyyaml>=6.0.1,<7",
    "optax==0.1.4",
    "chex==0.1.5",
    "numpy>=1.21.6",
]

[project.optional-dependencies]
atari = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
    "shimmy>=1.1.0",
]
procgen = ["procgen>=0.10.7,<0.11"]
plot = []
pytest = ["pytest>=7.1.3,<8"]
mujoco = [
    "mujoco>=2.3.3",
    "imageio>=2.14.1,<3",
]
jax = [
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
]
docs = [
    "mkdocs-material>=8.4.3,<9",
    "markdown-include>=0.7.0,<0.8",
    "openrlbenchmark>=0.1.1b4,<0.2",
]
envpool = ["envpool>=0.6.4,<0.7"]
optuna = [
    "optuna>=3.0.1,<4",
    "optuna-dashboard>=0.7.2,<0.8",
    "typing_extensions>=4.6.0"
]
pettingzoo = [
    "PettingZoo==1.18.1",
    "SuperSuit==3.4.0",
    "multi-agent-ale-py==0.1.11",
]
cloud = [
    "boto3>=1.24.70,<2",
    "awscli>=1.31.0,<2",
]
dm_control = [
    "shimmy>=1.1.0",
    "mujoco>=2.3.3",
    "dm-control>=1.0.10",
    "h5py>=3.7.0",
]
dqn = []
dqn_atari = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
]
dqn_jax = [
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
]
dqn_atari_jax = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
]
c51 = []
c51_atari = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
]
c51_jax = [
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
]
c51_atari_jax = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
]
ppo_atari_envpool_xla_jax_scan = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
    "envpool>=0.6.4,<0.7",
]
qdagger_dqn_atari_impalacnn = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
]
qdagger_dqn_atari_jax_impalacnn = [
    "ale-py==0.8.1",
    "AutoROM[accept-rom-license]~=0.4.2",
    "opencv-python>=4.6.0.66,<5",
    "jax==0.4.8",
    "jaxlib==0.4.7",
    "flax==0.6.8",
]

[dependency-groups]
dev = ["pre-commit>=2.20.0,<3"]

[tool.hatch.build.targets.sdist]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[tool.hatch.build.targets.wheel]
include = [
    "cleanrl",
    "cleanrl_utils",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
