[tool.poetry]
name = "classic_control"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
gym = "^0.18.3"
torch = "^1.9.0"
stable-baselines3 = "^1.1.0"
tensorboard = "^2.5.0"

[tool.poetry.dev-dependencies]
spyder = "^5.0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
