[project]
name = "ppo-trxl"
version = "1.0.1"
description = ""
authors = [{ name = "Marco Pleines", email = "marco.pleines@tu-dortmund.de" }]
requires-python = "~=3.10"
license = "MIT"
dependencies = [
    "memory-gym>=1.0.2,<2",
    "einops>=0.7.0,<0.8",
    "minigrid>=2.3.1,<3",
    "reprint>=0.6.0,<0.7",
    "opencv-python>=4.9.0.80,<5",
    "torch>=2.0.0,<3",
    "torchaudio>=2.0.0,<3",
    "wandb>=0.16.6,<0.17",
    "tyro>=0.8.3,<0.9",
    "tensorboard>=2.16.2,<3",
]

[tool.uv]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchaudio = { index = "pytorch" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
